--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,3 +19,20 @@
     width: 100%;
     height: auto;
   }
+.img-awoo {
+    width: 100%;
+    height: auto;
+}
+
+.text-awoo {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.text-awoo p {
+    font-size: 16px;
+    line-height: 20px;
+    color: #777;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
