--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -2,7 +2,11 @@ div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 10px;
   }
   
   div.gallery:hover {
@@ -12,6 +16,9 @@ div.gallery {
   div.gallery img {
     width: 100%;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   div.desc {
